Fixed button on mobile

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -50,7 +50,8 @@ h2 {
 
 .button {
   border: none;
-  width: 500px;
+  width: 100%;
+  max-width: 500px;
   height: 100px;
   font-size: 30px;
   margin: 5px 0px;
